# plan-flow

./: TODO.md  buildVars.py  pyproject.toml  readme.md  scons_pytest_targets.py  sconstruct
.github/: copilot-instructions.md
.github/instructions/: calander_planner.instructions.md  execution_repository.instructions.md  nvda-addon.instructions.md  recovery_service.instructions.md  scheduler_service.instructions.md  scheduling.instructions.md  smart-scheduler-controller.instructions.md  smart-trigger.instructions.md  task_model.instructions.md  test-integration.instructions.md  tests.instructions.md  wx-desktop.instructions.md  wx-python-accessibility-guidelines.instructions.md
addon/globalPlugins/planflow/task/: calendar_planner.py  execution_repository.py  model.py  recovery_service.py  schedule.py  scheduler_service.py  serialiser.py  smart_scheduler_controller.py  smart_scheduler_service.py  store.py  task_model.py
desktop_ui/: app.py  detail_panel.py  main_frame.py  slot_dialog.py  toolbar_panel.py  tree_panel.py  view_model.py
docs/: task-design.md
tests/: conftest.py  test_calendar_planner.py  test_calendar_planner.testplan.md  test_execution_repository.py  test_execution_repository.testplan.md  test_model.py  test_recovery_service.py  test_recovery_service.testplan.md  test_scheduler_basic.py  test_scheduler_edge.py  test_scheduler_missed.py  test_scheduler_recurring.py  test_scheduler_service.py  test_scheduler_service.testplan.md  test_scheduler_threading.py  test_serialiser.py  test_smart_scheduler_controller.py  test_smart_scheduler_service.py  test_smart_scheduler_service.testplan.md  test_store.py  test_task_model.py  test_task_model.testplan.md
tests/desktop_ui/: test_desktop_ui.py
tests/integration/: test_scheduler_flow.py  test_scheduler_flow.testplan.md  test_smart_scheduler_controller.py  test_smart_scheduler_controller_flow.py  test_smart_scheduler_service_flow.py  test_smart_scheduler_service_flow.testplan.md  testplan.md
tests/utils/: dummies.py
